# axial

./: Cargo.toml  LICENSE
packs/exthard/models/: dirt.ron  grass.ron  leaves.ron  sand.ron  stone.ron  wheat.ron  wheat_0.ron  wood.ron
packs/exthard/structures/: tree.ron
packs/nostalgia/models/: dirt.ron  glass.ron  grass.ron  stone.ron  water.ron  water_surface.ron  wheat.ron  wheat_0.ron
packs/nostalgia/structures/: tree.ron
src/: chunk.rs  event.rs  main.rs  mesh.rs  pov.rs  terraform.rs  types.rs  world.rs
src/asset/: mod.rs  raw.rs
src/video/: mod.rs  render.rs
src/video/wgsl/: chunk.wgsl  post.wgsl  reach.wgsl
